--- a/docs/fhatos.adoc
+++ b/docs/fhatos.adoc
@@ -88,7 +88,7 @@ $ fhatos --boot:config=../conf/boot-loader.obj
       .oO loading system objs Oo.
 [INFO]  [/sys/scheduler] scheduler started
 [INFO]  [/sys/router] router started
-[INFO]  [/sys/router] main memory [total=>6656]
+[INFO]  [/sys/router] main memory [total=>6912]
 [INFO]  [/sys/router] heap <none> spanning /sys/# attached
 [INFO]  [/sys/router] heap <none> spanning /mnt/# attached
 [INFO]  [/sys/router] heap /mnt/boot spanning /boot/# attached
@@ -612,7 +612,7 @@ fhatos> @a + 1                               // <3>
 
 ===== Sugar-Less mm-ADT
 
-In the code example above, the expression to import `/mmadt/ext` is pretty intense looking, to say the least.
+image:trill.png[width=150,float=right,title=trill] In the code example above, the expression to import `/mmadt/ext` is pretty intense looking, to say the least.
 
 [source,mmadt]
 ----
@@ -698,7 +698,7 @@ The input to the body of the `inst` is, as can be expected, the left-hand side `
 
 ===== Generalized Poly Evaluation Mechanics
 
-The `fos:frame` is the only aspect of an `inst` that makes it unique because every `poly`-type supports the same internally recursive application of an left-hand side `obj`.
+image:sopapilla.png[width=150,float=left,title=sopapilla]  The `fos:frame` is the only aspect of an `inst` that makes it unique because every `poly`-type supports the same internally recursive application of an left-hand side `obj`.
 For example, see how the internal `objs` if a `lst` are effected by the application of an `obj` outside of the `lst`.
 
 ====== Lst Application
@@ -764,8 +764,8 @@ fhatos> 2.rec[[is(gt(2)) => plus(2), _ => 0]]
 <!-- 🐓 -->
 ++++
 
-This feature of `rec` make it both a data structure and a flow control structure as once an `obj` has been applied to `rec`,
-the values of `rec` can be "drained". For instance,
+This feature of `rec` make it both a https://en.wikipedia.org/wiki/Data_structure[data structure] and a https://en.wikipedia.org/wiki/Control_flow[flow control structure] as once an `obj` has been applied to `rec`,
+the values of `rec` can be "drained". For instance, `if` is implemented with a two entry `rec`, where one entry maps to `noobj`.
 
 ++++
 <!-- 🐖 ./main_runner.out
@@ -801,6 +801,15 @@ In the above example, since `1` and `2` were mapped to `noobj`, they are effecti
 However, because `3` is `gt(2)`, it is mapped to `_` (its self). Thus, when `>-` is applied to this `rec`, the result is
 `{noobj,noobj,3}` which is equivalent to `{3}`. In this way, `rec` is both a data structure and a flow control structure.
 
+It's not difficult to realize how an "if"-`rec` generalizes to support
+"https://en.wikipedia.org/wiki/Conditional_(computer_programming)#If%E2%80%93then(%E2%80%93else)[if-else]",
+"https://en.wikipedia.org/wiki/Conditional_(computer_programming)#Case_and_switch_statements[switch]",
+"https://en.wikipedia.org/wiki/Conditional_(computer_programming)#Guarded_conditionals[guards]",
+"https://en.wikipedia.org/wiki/Conditional_(computer_programming)#Pattern_matching[pattern matching]"
+"https://en.wikipedia.org/wiki/Conditional_(computer_programming)#Hash-based_conditionals[hash-conditionals]",
+and other variations on the computing's most universal theme: "https://en.wikipedia.org/wiki/Branch_(computer_science)[branch]".
+
+
 ====
 NOTE: The `merge` (sugar'd `>-`) instruction has a correlate: `split` (sugar'd `-<`). The way to think of these two
 instructions is that they either branch a serial execution pipeline (`split`) or the join a collection of parallel
@@ -809,8 +818,7 @@ So why does an explicit `split` instruction exist? Because there are other ways 
 and evaluated. This will be discussed later when discussing `fos:thread`, `fos:coroutine`, and `fos:fiber`.
 ====
 
-
-===== Obj Application
+====== Obj Application
 
 The universal application of `.` (apply) implies that every `obj` is a function as every `obj` can have another `obj` applied to it.
 This is, in fact, the case.
